[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.78"
futures-util = "0.3.31"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4"
jsonwebtoken = "8"
dotenvy = "0.15"
lazy_static = "1.4"

[dev-dependencies]
reqwest = { version = "0.11.27", default-features = false, features = ["json"] }
