[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
reqwest = { version = "0.11.26", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.78"
futures-util = "0.3.31"
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = "0.4"
jsonwebtoken = "8"
dotenvy = "0.15"
lazy_static = "1.4"
rand = "0.8.5"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.58"
color-eyre = "0.6.3"
secrecy = { version = "0.8.0", features = ["serde"] }
validator = "0.16"

[dev-dependencies]
reqwest = { version = "0.11.27", default-features = false, features = ["json", "cookies"] } 
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.6.0"